# fog-data-benchmark-specification

./: .gitignore  LICENSE  README.md
lstm/: .gitignore  Makefile  README.md  infer.Dockerfile  infer.py  train.Dockerfile  train.py
lstm/cpp/: CMakeLists.txt  build.Dockerfile  entrypoint.sh  infer.cc
mockfog/: README.md  generate.py  infrastructure.jsonc
sensor/: Makefile  README.md  go.mod  main.go
